Fixed align error

--- a/src/containers/technologies/technologies.css
+++ b/src/containers/technologies/technologies.css
@@ -57,4 +57,9 @@
 
     padding-top: 2rem;
   }
+
+  .portfolio-stack1 {
+    align-items: center;
+    justify-content: center;
+  }
 }
